--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -505,4 +505,11 @@ body {
 	cursor: pointer;
 }
 
+.product-item__hover-text {
+	padding: 18px 21px;
+	box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+	background-color: rgba(255,255,255, .9);
+	border-radius: 3px;
+}
+
 
