--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -680,10 +680,200 @@ color: #1C62CD;
 	justify-content: space-between;
 }
 
-.footer__top-newslatter {
+.footer__top-newslatter.footer__top-item{
 	width: 295px;
+	margin-right: 50px;
 }
 
 .footer__top-title {
+	font-weight: bold;
+	font-size: 14px;
+	line-height: 17px;
+}
 
+.footer-form {
+	margin-top: 34px;
+	display: flex;
+	justify-content: space-between;
+}
+
+.footer-form__input {
+	background-color: #fff;
+	border: none;
+	font-size: 14px;
+	line-height: 17px;
+	padding: 0 12px;
+}
+
+.footer-form__input::placeholder {
+	color: #C4C4C4;
+}
+
+.footer-form__btn {
+	font-family: 'SFProDisplay-Semibold', sans-serif;
+	text-transform: uppercase;
+	padding: 10px 16px;
+	border: none;
+	background-color: #1C62CD;
+	color: #fff;
+	font-weight: 600;
+	font-size: 11px;
+	line-height: 13px;
+	letter-spacing: 0.12em;
+}
+
+.footer__top-item {
+	width: 200px;
+}
+
+.footer-list {
+	font-size: 14px;
+	line-height: 22px;
+}
+
+.footer__top-social.footer__top-item {
+	width: 250px;
+}
+
+.social-list {
+	display: flex;
+	align-items: center;
+	height: 100%;
+}
+
+.social-list__item + .social-list__item {
+	margin-left: 30px;
+}
+
+.breadcrumbs {
+	margin-bottom: 40px;
+}
+
+.breadcrumbs__list-item {
+	display: inline-block;
+	padding-right: 16px;
+	margin-right: 10px;
+	position: relative;
+	font-size: 15px;
+	line-height: 18px;
+	color: #C4C4C4;
+}
+
+.breadcrumbs__list-item::after {
+	content: "";
+	position: absolute;
+	background-image: url('../images/link-arrow.svg');
+	width: 6px;
+	height: 9px;
+	right: 0;
+	bottom: 5px;
+}
+
+.breadcrumbs__list-item:last-child::after {
+	display: none;
+}
+
+.catalog {
+	margin-bottom: 100px;
+}
+
+.catalog__title {
+	font-family: 'SFProDisplay-Bold', sans-serif;
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 36px;
+	margin-bottom: 26px;
+}
+
+.catalog__filter {
+	display: flex;
+	justify-content: space-between;
+	margin-bottom: 50px;
+}
+
+.catalog__filter-items button {
+	font-size: 14px;
+	line-height: 17px;
+	color: #2F3035;
+	opacity: 0.7;
+	background-color: #F0F0F4;
+	border-radius: 3px;
+	border: none;
+	padding: 5px 22px;
+	cursor: pointer;
+}
+
+.catalog__filter-items button + button {
+	margin-left: 8px;
+}
+
+.catalog__filter-btn button {
+	background-color: transparent;
+	border: none;
+	cursor: pointer;
+	margin: 0;
+	padding: 0;
+}
+
+.catalog__filter-btn button + button {
+	margin-left: 10px;
+}
+
+button.catalog__filter-btngrid {
+	
+}
+
+button.catalog__filter-btnline {
+	
+}
+
+.catalog__inner {
+	display: flex;
+}
+
+.catalog__inner-aside {
+	min-width: 290px;
+	margin-right: 10px;
+}
+
+.catalog__inner-list {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+}
+
+.catalog__inner-list .product-item__wrapper {
+	margin-bottom: 30px;
+}
+
+.product-item__img {
+	max-width: 100%;
+}
+
+.pagination {
+	width: 100%;
+	margin-top: 70px;
+} 
+
+.pagination-list {
+	display: flex;
+	justify-content: center;
+}
+
+.pagination-list__item {
+	padding: 6px 12px;
+	border: 2px solid transparent;
+	margin: 0 4px;
+	font-size: 18px;
+	line-height: 22px;
+	color: #C4C4C4;
+}
+
+.pagination-list__item.active {
+	border: 2px solid #1C62CD;
+	color: #1C62CD;
+}
+
+.pagination-list__item a {
+	display: block;
 }
