--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -877,3 +877,63 @@ button.catalog__filter-btnline {
 .pagination-list__item a {
 	display: block;
 }
+
+.aside-filter__tabs {
+	display: flex;
+	justify-content: space-between;
+}
+
+.aside-filter__tab {
+	font-weight: 400;
+	font-size: 16px;
+	line-height: 19px;
+	letter-spacing: 0.09em;
+	text-transform: uppercase;
+	color: #C4C4C4;
+	width: 50%;
+}
+
+.aside-filter__tab.tab--active {
+	font-family: 'SFProDisplay-Bold', sans-serif;
+	font-weight: bold;
+	color: #2F3035;
+}
+
+
+.aside-filter__tab.tab--active span {
+	display: inline-block;
+	border-bottom: 2px solid #1C62CD;
+	padding-bottom: 7px;
+}
+
+.aside-filter__item-drop {
+	margin: 40px 0;
+}
+
+.aside-filter__item-title {
+	font-family: 'SFProDisplay-Semibold', sans-serif;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 19px;
+	padding-left: 26px;
+}
+
+.filter__item-drop {
+	margin-bottom: 20px;
+	position: relative;
+}
+
+.filter__item-drop::before {
+	content: "";
+	background-image: url(../images/arrow-down.svg);
+	position: absolute;
+	left: 0;
+	bottom: 4px;
+	width: 12px;
+	height: 8px;
+}
+
+
+.filter__item-drop--active {
+
+}
