--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -921,6 +921,7 @@ button.catalog__filter-btnline {
 .filter__item-drop {
 	margin-bottom: 20px;
 	position: relative;
+	cursor: pointer;
 }
 
 .filter__item-drop::before {
@@ -928,12 +929,28 @@ button.catalog__filter-btnline {
 	background-image: url(../images/arrow-down.svg);
 	position: absolute;
 	left: 0;
-	bottom: 4px;
+	bottom: 5px;
 	width: 12px;
 	height: 8px;
+	transform: rotate(0deg);
 }
 
 
-.filter__item-drop--active {
+.filter__item-drop--active::before {
+	transform: rotate(180deg);
+}
 
+.aside-filter__content {
+	display: flex;
+}
+
+.aside-filter__content-box {
+	width: 50%;
+}
+ 
+.aside-filter__content-label {
+	font-weight: normal;
+	font-size: 14px;
+	line-height: 17px;
+	cursor: pointer;
 }
