--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -919,7 +919,6 @@ button.catalog__filter-btnline {
 }
 
 .filter__item-drop {
-	margin-bottom: 20px;
 	position: relative;
 	cursor: pointer;
 }
@@ -942,6 +941,8 @@ button.catalog__filter-btnline {
 
 .aside-filter__content {
 	display: flex;
+	flex-wrap: wrap;
+	margin-top: 20px;
 }
 
 .aside-filter__content-box {
@@ -953,4 +954,171 @@ button.catalog__filter-btnline {
 	font-size: 14px;
 	line-height: 17px;
 	cursor: pointer;
+}
+
+.jq-checkbox,
+.jq-radio {
+	background: #fff;
+	width: 14px;
+	height: 14px;
+	border: 1px solid #c4c4c4;
+	border-radius: 1px;
+	box-shadow: none;
+	vertical-align: -1px;
+	margin: 0 8px 0 0;
+}
+
+.jq-checkbox.checked,
+.jq-radio.checked {
+	background: #1C62CD;
+	border: none;
+}
+
+.jq-checkbox.checked .jq-checkbox__div {
+	width: 8px;
+	height: 6px;
+	margin: 4px 0 0 3px;
+	border-bottom: none;
+	border-left: none;
+	transform: rotate(0);
+	background-image: url(../images/checked-icon.svg);
+}
+
+.jq-radio.checked .jq-radio__div {
+	width: 0;
+	height: 0;
+	margin: 0;
+	border-radius: 0;
+	background: transparent;
+	box-shadow: none;
+}
+
+.aside-filter__content.aside-filter__content-radio {
+	flex-wrap: nowrap;
+}
+
+.irs--flat {
+	width: 100%;
+	margin-top: -15px;
+}
+
+
+.irs--flat .irs-from, .irs--flat .irs-to, .irs--flat .irs-single {
+	display: none;
+}
+
+.irs--flat .irs-min, 
+.irs--flat .irs-max {
+	font-family: 'Barlow', sans-serif;
+	top: 55px;
+	padding: 0;
+	font-size: 14px;
+	line-height: 17px;
+	text-decoration: underline;
+	color: #2F3035;
+	text-shadow: none;
+	background-color: transparent;
+	border-radius: 0;
+	visibility: visible !important;
+	padding-left: 27px;
+}
+
+.irs-min::before, 
+.irs-max::before {
+	position: absolute;
+	font-size: 14px;
+	line-height: 17px;
+	color: #C4C4C4;
+	text-decoration: none;
+	left: 0;
+}
+
+.irs-min::before {
+	content: 'от';
+}
+
+.irs-max::before {
+	content: 'до';
+}
+
+.irs--flat .irs-line {
+	top: 25px;
+	height: 1px;
+	background-color: #e0e0e0;
+	border-radius: 0;
+}
+
+.irs--flat .irs-bar {
+	top: 25px;
+	height: 3px;
+	background-color: #1C62CD;
+}
+
+.irs--flat .irs-handle {
+	top: 22px;
+	width: 8px;
+	height: 8px;
+	background-color: #1C62CD;
+	border-radius: 50%;
+}
+
+.irs--flat .irs-handle>i:first-child,
+.irs--flat .irs-handle.state_hover>i:first-child, .irs--flat .irs-handle:hover>i:first-child {
+	background-color: #1C62CD;
+}
+
+.aside-filter__item-list {
+	margin: 80px 0 40px;
+	border-bottom: 2px solid #C4C4C4;
+}
+
+.filter__item-list {
+	display: flex;
+	justify-content: space-between;
+}
+
+.filter__item-listtitle {
+	font-family: 'SFProDisplay-Semibold', sans-serif;
+	font-weight: 600;
+	font-size: 16px;
+	line-height: 19px;
+	padding-bottom: 14px;
+}
+
+.filter__item-listselect {
+	font-family: 'Barlow', sans-serif;
+	font-size: 14px;
+	line-height: 17px;
+	color: #48494D;
+}
+
+.jq-selectbox__select {
+	font-family: 'Barlow', sans-serif;
+	font-size: 14px;
+	line-height: 17px;
+	color: #48494D;
+	height: 32px;
+	padding: 0 45px 0 10px;
+	border-radius: 0;
+	background: transparent;
+	box-shadow: none;
+	text-shadow: none;
+	border: none;
+}
+
+.jq-selectbox__trigger-arrow {
+	position: absolute;
+	top: 14px;
+	right: 12px;
+	width: 0;
+	height: 0;
+	border: 0;
+}
+
+.jq-selectbox__trigger {
+	background-image: url(../images/arrow-down.svg);
+	bottom: 5px;
+	width: 12px;
+	height: 8px;
+	border-left: none;
 }
