--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -820,10 +820,15 @@ color: #1C62CD;
 }
 
 button.catalog__filter-btngrid {
-	
+	width: 26px;
+	height: 21px;
 }
 
 button.catalog__filter-btnline {
+	
+}
+
+.select-item {
 	
 }
 
@@ -942,11 +947,12 @@ button.catalog__filter-btnline {
 .aside-filter__content {
 	display: flex;
 	flex-wrap: wrap;
-	margin-top: 20px;
+	margin-top: 15px;
 }
 
 .aside-filter__content-box {
 	width: 50%;
+	margin-bottom: 10px;
 }
  
 .aside-filter__content-label {
@@ -1068,13 +1074,14 @@ button.catalog__filter-btnline {
 }
 
 .aside-filter__item-list {
-	margin: 80px 0 40px;
-	border-bottom: 2px solid #C4C4C4;
+	margin: 46px 0 40px;
 }
 
 .filter__item-list {
 	display: flex;
 	justify-content: space-between;
+	border-bottom: 2px solid #C4C4C4;
+	padding-top: 34px;
 }
 
 .filter__item-listtitle {
@@ -1083,6 +1090,7 @@ button.catalog__filter-btnline {
 	font-size: 16px;
 	line-height: 19px;
 	padding-bottom: 14px;
+	padding-left: 26px;
 }
 
 .filter__item-listselect {
@@ -1097,8 +1105,8 @@ button.catalog__filter-btnline {
 	font-size: 14px;
 	line-height: 17px;
 	color: #48494D;
-	height: 32px;
-	padding: 0 45px 0 10px;
+	height: 20px;
+	padding: 0 25px 0 10px;
 	border-radius: 0;
 	background: transparent;
 	box-shadow: none;
@@ -1121,4 +1129,180 @@ button.catalog__filter-btnline {
 	width: 12px;
 	height: 8px;
 	border-left: none;
+	top: 6px;
+	right: 9px;
+}
+
+.jq-selectbox__select:hover,
+.jq-selectbox__select:active {
+	background: transparent;
+	box-shadow: none;
+}
+
+.jq-selectbox.focused .jq-selectbox__select {
+	border: none;
+}
+
+.jq-selectbox li:hover {
+	background: rgba(107, 126, 172, 0.05);
+	color: rgba(0, 0, 0, 0.6);
+}
+
+.jq-selectbox li.selected {
+	background: rgba(107, 126, 172, 0.05);
+	color: rgba(0, 0, 0, 0.6);
+}
+
+.jq-selectbox li {
+	color: rgba(0, 0, 0, 0.6);
+}
+
+.jq-selectbox__dropdown {
+	border-radius: 0;
+	padding-top: 15px;
+}
+
+.filter-more {
+	width: 100%;
+}
+
+.filter-more-btn {
+	font-size: 14px;
+	line-height: 17px;
+	background-color: transparent;
+	border: none;
+	border-bottom: 1px solid #1C62CD;
+	color: #1C62CD;
+	padding: 0;
+}
+
+.filter-search {
+	width: 100%;
+	border: 1px solid #E0E0E0;
+	height: 30px;
+	padding: 0 20px;
+	font-size: 12px;
+	line-height: 14px;
+	margin-bottom: 20px;
+	margin-top: 10px;
+}
+
+.filter-search::placeholder {
+	color: #BDBEC2;
+}
+
+.btn-checked .aside-filter__content {
+	flex-wrap: nowrap;
+	justify-content: space-between;
+}
+
+.btn-checked .aside-filter__content-box {
+	width: auto;
+}
+
+ .btn-checked .aside-filter__content-label {
+	font-family: 'SFProDisplay-Bold', sans-serif;
+	position: relative;
+	height: 25px;
+	width: 63px;
+	font-weight: bold;
+	font-size: 12px;
+	line-height: 14px;
+	letter-spacing: 0.07em;
+	color: #C4C4C4;
+}
+
+.btn-checked__text {
+	position: absolute;
+	top: -7px;
+	left: 50%;
+	transform: translateX(-57%);
+	z-index: 5;
+}
+
+.btn-checked .jq-checkbox {
+	background: #F0F0F4;
+	height: 25px;
+	width: 63px;
+	border: none;
+}
+
+.btn-checked .jq-checkbox.checked {
+	background: #1C62CD;
+}
+
+.btn-checked .jq-checkbox.checked ~ .btn-checked__text {
+	color: #fff;
+}
+
+.btn-checked .jq-checkbox.checked .jq-checkbox__div {
+	display: none;
+}
+
+.filter-btn__send {
+	background: #F0F0F4;
+	padding: 16px 85px;
+	text-transform: uppercase;
+	font-size: 15px;
+	line-height: 18px;
+	letter-spacing: 0.12em;
+	color: #BDBEC2;
+	border: none;
+	cursor: pointer;
+	margin-bottom: 15px;
+}
+
+.filter-btn__send--active {
+	background-color: #1C62CD;
+	color: #fff;
+}
+
+.aside-filter__item-btn {
+	text-align: center;
+}
+
+.filter__extra {
+	font-size: 13px;
+	line-height: 16px;
+	position: relative;
+	padding-right: 29px;
+	display: inline-block;
+	margin-bottom: 15px;
+}
+
+.filter__extra::after {
+	content: '';
+	position: absolute;
+	right: 0;
+	top: 4px;
+	background-image: url(../images/arrow-down.svg);
+	width: 12px;
+	height: 8px;
+}
+
+.filter__extra-content {
+	display: none;
+}
+
+.filter__extra.filter__item-drop--active::after {
+	transform: rotate(180deg);
+}
+
+.filter-btn__reset {
+	background-color: transparent;
+	padding: 0;
+	border: none;
+	font-size: 13px;
+	line-height: 16px;
+	border-bottom: 1px solid #C4C4C4;
+	display: inline-block;
+	color: #C4C4C4;
+}
+
+.catalog__filter-btngrid {
+	
+}
+
+.catalog__filter-btn {
+
 }
