--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -1354,7 +1354,7 @@ button.catalog__filter-btnline {
 .product-card__price-old {
 	display: inline-block;
 	font-size: 44px;
-	line-height: 36px;
+	line-height: 50px;
 	color: #2F3035;
 	opacity: 0.6;
 	margin-bottom: 0;
@@ -1371,14 +1371,203 @@ button.catalog__filter-btnline {
 	margin-bottom: 17px;
 }
 
-
-.product-card__content {
-	width: 570px;
-}
-
 .product-card__link {
 	font-size: 15px;
 	line-height: 18px;
 	color: #1C62CD;
 	border-bottom: 1px solid #1C62CD;
+}
+
+.product-card__content {
+	width: 570px;
+}
+
+.product-card__title {
+	font-family: 'SFProDisplay-Bold', sans-serif;
+	font-weight: bold;
+	font-size: 30px;
+	line-height: 36px;
+	margin-bottom: 10px;
+}
+
+.product-card__code {
+	font-size: 15px;
+	line-height: 18px;
+	color: #2F3035;
+	opacity: 0.6;
+	margin-bottom: 22px;
+}
+
+.product-card__buttons {
+	margin-bottom: 50px;
+}
+
+.product-card__tab {
+	font-size: 20px;
+	line-height: 24px;
+	color: #2F3035;
+	opacity: 0.6;
+	padding-bottom: 5px;
+	padding-right: 17px;
+	margin-bottom: 5px;
+}
+
+.product-card__tab + .product-card__tab {
+	padding-left: 17px;
+}
+
+.product-card__tab.tab--active {
+	font-family: 'SFProDisplay-Bold', sans-serif;
+	font-weight: bold;
+	opacity: 1;
+	border-bottom: 2px solid #1C62CD;
+}
+
+.product-card__item {
+	display: flex;
+	justify-content: space-between;
+	padding: 15px 0 6px;
+	border-bottom: 1px solid rgba(47, 48, 53, 0.1);
+}
+
+.product-card__item-left {
+	padding-right: 15px;
+}
+
+.product-card__item-right {
+	width: 125px;
+}
+
+.product-card__more {
+	font-size: 14px;
+	line-height: 17px;
+	color: #1C62CD;
+	border-bottom: 1px solid #1C62CD;
+	margin-bottom: 40px;
+}
+
+.product-card__list {
+	margin-bottom: 20px;
+}
+
+.product-card__btn button {
+	font-size: 14px;
+	line-height: 17px;
+	letter-spacing: 0.12em;
+	text-transform: uppercase;
+	color: #FFFFFF;
+	padding: 16px 56px;
+	background: #1C62CD;
+	border-radius: 3px;
+	border: none;
+	cursor: pointer;
+}
+
+.product-card__buttons a + a {
+	margin-left: 30px;
+}
+
+.card__tabs {
+	margin-bottom: 100px;
+}
+
+.card__tab-box {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	padding: 22px 0;
+	background: #F0F0F4;
+	margin-bottom: 50px;
+}
+
+.card__tab {
+	font-size: 20px;
+	line-height: 24px;
+	color: #2F3035;
+	opacity: 0.6;
+}
+
+.card__tab.tab--active {
+	border-bottom: 2px solid #1C62CD;	
+	opacity: 1;
+}
+
+.card__top-line {
+	margin-bottom: 10px;
+}
+
+.card__label-search {
+	font-size: 17px;
+	line-height: 20px;
+	color: rgba(47, 48, 53, 0.7);
+}
+
+.card__input-search {
+	background: #F0F0F4;
+	border-radius: 3px;
+	margin-left: 17px;
+	padding: 9px 37px 9px 17px;
+	border: none;
+	margin-right: 100px;
+}
+
+.card__label-pickup {
+	margin-left: 54px;
+	font-size: 17px;
+	line-height: 20px;
+	color: rgba(47, 48, 53, 0.7);
+}
+
+.card__list-item {
+	display: flex;
+	padding: 20px 0;
+	border-bottom: 1px solid rgba(47, 48, 53, 0.1);
+	font-size: 16px;
+	line-height: 22px;
+	color: rgba(47, 48, 53, 0.7);
+}
+
+.card__list-itemtitle {
+	color: rgb(47, 48, 53);
+	font-size: 20px;
+	line-height: 24px;
+}
+
+.card__list-address {
+	width: 220px;
+	margin-right: 80px;
+}
+
+.card__list-workhours {
+	width: 173px;
+	margin-right: 80px;
+}
+
+.card__list-workhours span {
+	display: block;
+}
+
+.card__list-avialable {
+	width: 140px;
+	margin-right: 60px;
+}
+
+.card__list-num {
+	width: 104px;
+}
+
+.card__list-btn {
+	margin-left: auto;
+}
+
+.card__list-btn button {
+	font-size: 13px;
+	line-height: 16px;
+	letter-spacing: 0.12em;
+	color: #FFFFFF;
+	padding: 9px 40px;
+	text-transform: uppercase;
+	background-color: #1C62CD;
+	border: none;
+	border-radius: 3px;
 }
