--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -35,6 +35,8 @@ body {
 	font-size: 20px;
 	line-height: 24px;
 	font-weight: 400;
+	overflow-x: hidden;
+	min-width: 320px;
 }
 
 .container {
@@ -68,11 +70,43 @@ body {
 	display: flex;
 }
 
+.menu__btn {
+	display: none;
+}
+
 .header__adress {
 	margin-right: 60px;
 	width: 265px;
 	padding-left: 30px;
 	position: relative;
+}
+
+.menu-mobile__list {
+	width: 243px;
+	box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+	transform: translateX(-100%);
+	transition: all .3s;
+}
+
+.menu-mobile__list--active {
+	transform: translateX(0%);
+}
+
+.menu-mobile__item {
+	position: relative;
+	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.menu-mobile__link {
+	display: block;
+	padding-left: 53px;
+	padding-top: 36px;
+}
+
+.menu-mobile__img {
+	position: absolute;
+	left: 11px;
+	bottom: 0;
 }
 
 .header__adress::before {
@@ -111,8 +145,8 @@ body {
 	height: 20px;
 	background-color: #1C62CD;
 	border-radius: 50%;
-	bottom: -15px;
-	right: -14px;
+	bottom: -2px;
+	right: -13px;
 	text-align: center;
 }
 .header__bottom {
@@ -1539,12 +1573,13 @@ button.catalog__filter-btnline {
 }
 
 .card__list-workhours {
-	width: 173px;
-	margin-right: 80px;
+	width: 157px;
+	margin-right: 96px;
 }
 
-.card__list-workhours span {
-	display: block;
+.workhours {
+	display: flex;
+	justify-content: space-between;
 }
 
 .card__list-avialable {
