--- a/gidrotsikly/css/media.css
+++ b/gidrotsikly/css/media.css
@@ -1,3 +1,31 @@
+@media (max-width: 1300px) {
+	.product__more {
+		margin-top: 60px;
+	}
+}
+
+@media (max-width: 1200px) {
+	.banner-section__slider-img {
+		min-height: 380px;
+		max-width: 600px;
+	}
+	.banner-section__inner {
+		justify-content: space-around;
+	}
+	.banner-section__slider {
+		flex-wrap: wrap;
+		max-width: 600px;
+	}
+
+	.categories__inner {
+		justify-content: space-around;
+	}
+
+	.banner-link img {
+		width: 100%;
+	}
+}
+
 @media (max-width: 1100px) {
 
 	.menu__item + .menu__item {
@@ -7,7 +35,8 @@
 	.header__adress {
 		margin-right: 20px;
 	}
-}
+
+	}
 
 @media (max-width: 968px) {
 	.header__bottom {
@@ -17,12 +46,28 @@
 	.menu__list {
 		display: none;
 	}
+	
+	.menu__mobile-linewrapper{
+		display: block;
+		font-family: 'SFProDisplay-Bold', sans-serif;
+		font-weight: bold;
+		font-size: 20px;
+		line-height: 24px;
+		background: #F0F0F4;
+		overflow-x: scroll;
+	}
+
+	.menu__mobile-line {
+		padding: 14px 0 14px 15px;
+		width: 450px;
+	}
 
 	.menu__btn {
 		display: block;
 		background-color: transparent;
 		cursor: pointer;
 		border: none;
+		padding: 0;
 	}
 
 	.menu__btn-line {
@@ -32,10 +77,95 @@
 		width: 34px;
 		margin: 8px 0;
 	}
+
+	.banner-section__inner {
+		margin-top: 25px;
+		flex-wrap: wrap;
+		justify-content: center;
+	}
+
+	.banner-section__slider-item {
+		text-align: center;
+	}
+
+	.banner-section__slider {
+		max-width: 100%;
+	}
+
+	.banner-section__slider-img {
+		max-width: 100%;
+		margin-bottom: 25px;
+	}
+
+	.mobile-overflow {
+		width: 1000px;
+	}
+
+	.tabs-wrapper {
+		overflow-x: scroll;
+	}
+}
+
+@media (max-width: 940px) {
+	.footer__top-inner {
+		flex-wrap: wrap;
+		justify-content: space-around;
+	}
+
+	.footer__top-item {
+		margin-bottom: 25px;
+	}	
 }
 
 @media (max-width: 640px) {
 	.header__adress {
 		display: none;
+	}
+
+	.banner-section__slider-img {
+		min-height: 200px;
+	}
+
+	.banner-section .container {
+		padding: 0;
+	}
+
+	.search__content-btn {
+			font-size: 0;
+			line-height: 0;
+			text-transform: uppercase;
+			padding: 17px;
+			background-image: url(../images/search.svg);
+			background-repeat: no-repeat;
+			width: 24px;
+			height: 24px;
+			background-color: transparent;
+			position: absolute;
+			right: 8px;
+			top: 13px;
+		}
+
+		.search__content-form {
+			position: relative;
+		}
+
+		.search__content-input {
+			height: 50px;
+			padding-right: 50px;
+		}	
+
+		.banner-link img {
+			min-height: 90px;
+			object-fit: contain;
+		}
+	}
+
+@media (max-width: 440px) {
+	.banner-section__slider-img {
+		min-height: 164px;
+	}
+
+	.categories__item {
+		padding: 20px 10px 16px;
 	}
 }
