--- a/gidrotsikly/css/media.css
+++ b/gidrotsikly/css/media.css
@@ -24,6 +24,10 @@
 	.banner-link img {
 		width: 100%;
 	}
+
+	.catalog__inner-list {
+		justify-content: space-around;
+	}
 }
 
 @media (max-width: 1100px) {
@@ -36,7 +40,10 @@
 		margin-right: 20px;
 	}
 
+	.card__input-search {
+		margin-right: 0;
 	}
+}
 
 @media (max-width: 968px) {
 	.header__bottom {
@@ -101,9 +108,37 @@
 		width: 1000px;
 	}
 
-	.tabs-wrapper {
+	.catalog__filter-itemsinner,
+	.tabs-wrapper,
+	.breadcrumbs__inner {
 		overflow-x: scroll;
 	}
+
+	.tabs-wrapper.tabs-wrapper--no-scroll {
+		overflow: hidden;
+	}
+
+	.product-card__inner {
+		flex-wrap: wrap;
+	}
+
+	.product-card__tabs {
+		display: none;
+	}
+
+	.product-card__content {
+		order: -1;
+	}
+
+	.product-card__btn-mobile {
+		display: block;
+		margin-top: 40px;
+	}
+
+	.product-card__img-box {
+		width: 100%;
+	}
+
 }
 
 @media (max-width: 940px) {
@@ -115,6 +150,18 @@
 	.footer__top-item {
 		margin-bottom: 25px;
 	}	
+
+	.catalog__filter-btn button {
+		display: none;
+	}
+
+	.catalog__filter-btn {
+		margin-top: 30px;
+	}
+
+	.catalog__filter {
+		display: block;
+	}
 }
 
 @media (max-width: 640px) {
@@ -158,6 +205,112 @@
 			min-height: 90px;
 			object-fit: contain;
 		}
+
+		.catalog__inner {
+			flex-wrap: wrap;
+		}
+
+		.aside__btn {
+		display: block;
+		text-transform: uppercase;
+		font-weight: 700;
+		text-align: center;
+		padding: 15px 0;
+		width: 100%;
+		color: white;
+		background-color: #1C62CD;
+		margin-bottom: 30px;
+	}
+
+		.aside-filter {
+		display: none;
+		}
+
+		.product-card__title {
+			font-size: 20px;
+			line-height: 24px;
+		}
+
+		.product-card__buttons a + a {
+			margin-left: 10px;
+		}	
+
+		.product-card__img {
+			width: 100%;
+		}
+	}
+
+	@media (max-width: 540px) {
+		.footer__top-item {
+			width: 100%;
+		}
+
+		.footer-bottom {
+			flex-direction: column;
+			align-items: start;
+		}
+
+		.footer-bottom-link {
+			margin: 12px 0;
+		}
+
+		.footer__top-inner {
+			justify-content: start;
+		}
+
+		.footer__top-newslatter.footer__top-item {
+			margin-right: auto;
+			margin-left: auto;
+			width: 290px;
+			text-align: center;
+		}
+
+		.footer__top-social.footer__top-item {
+			width: 100%;
+			border-bottom: none;
+		}
+
+		.social-list {
+			justify-content: center;
+		}
+
+		.footer-list {
+			display: none;
+		}
+
+		.footer__top-title.footer__topdrop {
+			font-weight: 500;
+			font-size: 14px;
+			line-height: 18px;
+			color: #7F7F7F;
+			padding: 15px 0;
+		}
+
+		.footer__top-item {
+			border-bottom: 2px solid #F9F9FC;
+		}
+
+		.footer__top-itemdrop {
+			margin-bottom: 0;
+			border-top: 2px solid #F9F9FC;
+		}
+
+		.footer__topdrop {
+			position: relative;
+		}
+		.footer__topdrop::after {
+			content: "";
+			position: absolute;
+			background-image: url(../images/arrow-down.svg);
+			right: 0;
+			top: 21px;
+			width: 12px;
+			height: 8px;
+		}
+
+		.footer__topdrop--active::after {
+			transform: rotate(180deg);
+		}
 	}
 
 @media (max-width: 440px) {
@@ -167,5 +320,9 @@
 
 	.categories__item {
 		padding: 20px 10px 16px;
+	}
+
+	.pagination-list__item {
+		margin: 0;
 	}
 }
