--- a/gidrotsikly/css/style.css
+++ b/gidrotsikly/css/style.css
@@ -1639,3 +1639,11 @@ button.catalog__filter-btnline {
 .product-card__btn-mobile {
 	display: none;
 }
+
+.footer__topdrop {
+	pointer-events: none;
+}
+
+.logo__mobile-img {
+	display: none;
+}
